traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:14: error: reassignment to val
      diag = diag + 1
           ^TraversalDiagonal:16: error: value += is not a member of Int
      diag += 1
           ^TraversalDiagonal:23: error: value += is not a member of Int
      diag += 1
           ^